syntax = "proto3";

option java_package = "in.xnnyygn.xraft.core.rpc";
option java_outer_classname = "Protos";

message RequestVoteRpc {
    int32 term = 1;
    string candidate_id = 2;
    int32 last_log_index = 3;
    int32 last_log_term = 4;
}

message RequestVoteResult {
    int32 term = 1;
    bool vote_granted = 2;
}

message AppendEntriesRpc {
    int32 term = 1;
    string leader_id = 2;
    int32 prev_log_index = 3;
    int32 prev_log_term = 4;
    int32 leader_commit = 5;

    message Entry {
        int32 kind = 1;
        int32 index = 2;
        int32 term = 3;
        bytes command = 4;
    }

    repeated Entry entries = 6;
}

message AppendEntriesResult {
    int32 term = 1;
    bool success = 2;
}

message InstallSnapshotRpc {
    int32 term = 1;
    string leader_id = 2;
    int32 last_included_index = 3;
    int32 last_included_term = 4;
    int32 offset = 5;
    bytes data = 6;
    bool done = 7;
}

message InstallSnapshotResult {
    int32 term = 1;
}